<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="9">

        <!-- Form content-->
        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="4">

            <!-- Row 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/txt_fullname"/>

                <EditText
                    android:id="@+id/edt_fullname"
                    android:layout_weight="2.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <!-- Row 2 -->
            <RadioGroup
                android:id="@+id/rdbtngr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/txt_level"/>

                <RadioButton
                    android:id="@+id/rbtn_tc"
                    android:layout_width="wrap_content"
                    android:text="@string/txt_tc"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/rbtn_cd"
                    android:layout_width="wrap_content"
                    android:text="@string/txt_cd"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/rbtn_dh"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_weight="1"
                    android:text="@string/txt_dh" />
            </RadioGroup>

            <!-- Row 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/txt_interests"/>

                <CheckBox
                    android:id="@+id/ck_readbook"
                    android:layout_width="wrap_content"
                    android:text="@string/txt_read_book"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

                <CheckBox
                    android:id="@+id/ck_watchmovie"
                    android:layout_width="wrap_content"
                    android:text="@string/txt_wacth_movie"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <!-- Row 4 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/txt_other"/>

                <EditText
                    android:id="@+id/edt_interests"
                    android:layout_weight="2.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <!-- /Form content-->

        <!-- List view -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:weightSum="1">

            <ListView

                android:id="@+id/lv_nhansu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </ListView>

        </LinearLayout>
        <!-- /List view -->


        <!-- Action -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:drawableLeft="@mipmap/icons8_add_64px_2"
                android:id="@+id/btn_add"
                android:background="#0059FF"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/txt_add"/>

            <Button
                android:id="@+id/btn_exit"
                android:background="#DF0000"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_exit"/>

        </LinearLayout>
        <!--/ Action -->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>